syntax = "proto2";
import "types.proto";
package bs.property;
option go_package ="/property";

enum CMDProperty {
	IDQueryPropertyReq			= 1;			//查询财富
	IDQueryPropertyRsp			= 2;			//查询财富
	IDModifyPropertyReq			= 3;			//修改财富
	IDModifyPropertyRsp			= 4;			//修改财富
};

message QueryPropertyReq{
	optional uint64   	user_id = 1;         	//用户ID
}

message QueryPropertyRsp{
	optional uint64   				user_id = 1;         	//用户ID
	repeated types.PropItem 		user_props = 2;			//用户道具
	optional types.ErrorInfo		err_info = 99;
}

message ModifyPropertyReq{
	optional uint64   				user_id = 1;         	//用户ID
	optional int32   				op_type = 2;         	//操作类型
	repeated types.PropItem 		user_props = 3;			//用户道具
}

message ModifyPropertyRsp{
	optional uint64   				user_id = 1;         	//用户ID
	optional int32   				op_type = 2;         	//操作类型
	repeated types.PropItem 		user_props = 3;			//用户道具
	optional types.ErrorInfo		err_info = 99;
}